public record HowHaventMoney(int lackOfMoney) {
}
