public interface MoneyChecker {
	void checkMoney(Entity a, Entity b);
}
